[package]
name = "diskmon"
version = "0.1.0"
authors = ["Hiroki Tanaka <support@kumano-te.com>"]
license = "MIT"
edition = "2021"
description = "Disk capacity monitoring tool"
repository = "https://github.com/kumanote/diskmon"
readme = "README.md"
keywords = ["df", "monitoring", "operation"]

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1.0"
futures = "0.3"
tokio = { version = "1.15.0", features = ["full"] }
structopt = "0.3.26"

logger = { version = "0.1.0", git = "https://github.com/kumanote/logger-rs", branch = "main", features = ["airbrake"] }

config = { path = "../config" }
disk = { path = "../disk" }

[dev-dependencies]

[features]
default = []
